🩹 Fix: header item size and position were incorrect on narrow height screens

--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -38,10 +38,12 @@ li {
 	}
 
 	@include low-height {
-		margin: 1px 12px 3px 10px;
+		@include sp {
+			margin: 1px 12px 3px 10px;
 
-		a {
-			font-size: 23px;
+			a {
+				font-size: 23px;
+			}
 		}
 	}
 }
